# CanonComparator

./: .gitignore  README.md  pyproject.toml
canoncomparator/: __main__.py  compare.py  config.py  mb_client.py  overrides.py  types.py
canoncomparator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
canoncomparator/providers/: lidarr.py
